# la-quebrada-viva

./: .claudeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CREDITS.md  LICENSE  LICENSE_BUNDLE.md  MASTER_BRIEF.md  Makefile  PROJECT_INDEX.md  PROVENANCE.md  README.md  STATUS.md  build_scene.py  claude_code_blender_best_practices.md  paraguay_clay_house_research.md  prompt_house_render.md  prompt_location_scene.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.json.recommended
.claude/agents/: render-validator.md
.claude/hooks/: check-python.sh
.githooks/: pre-commit
.github/workflows/: lint.yml  smoke.yml  (+1 more)
LICENSES/: Barrel_01.txt  Bricks003.txt  Bricks017.txt  Bricks019.txt  Bricks022.txt  Bricks023.txt  Bricks025.txt  Bricks030.txt  Bricks050.txt  Bricks051.txt  Bricks052.txt  Bricks066.txt  Bricks077.txt  CoffeeCart_01.txt  Concrete002.txt  Concrete003.txt  Concrete007.txt  Concrete017.txt  Concrete023.txt  Ground003.txt  Ground023.txt  Ground027.txt  Ground029.txt  Ground033.txt  Ground036.txt  Ground037.txt  Ground039.txt  Ground047.txt  Ground048.txt  Ground054.txt  Ground055S.txt  Ground061.txt  Ground067.txt  Ground068.txt  Ground074.txt  Lantern_01.txt  Metal003.txt  Metal007.txt  Metal009.txt  Metal027.txt  (+379 more)
docs/: AI_WHISPERERS_STYLE.md  ARCHIVE_RUNBOOK.md  ASSETS_INTEGRATION_PLAN.md  ASSETS_INVENTORY.csv  AUTONOMOUS_PLAN.md  CHANGELOG.md  CLIENT.md  CLOSING_DAY_PREP.md  CONTINGENCIES.md  CRITIQUE_2026-06-10.md  CRITIQUE_2026-06-13.md  CRITIQUE_BUILDERS_v2.md  DECISIONS.md  DEFERRED_BUGS.md  EUROPEAN_TOURISM_SPEC.md  FINAL_GALLERY.md  GAPS_ANALYSIS.md  HOUSE_IMAGERY_SHOTLIST.md  HOUSING_PARK_CONCEPT.md  IMPROVEMENT_PLAN_2026-06-13.md  INDEX.md  MASTER_BRIEF.md  MASTER_TODO.md  MCP_STATUS.md  MODELS_ROAST.md  MORNING_RUNBOOK_2026-06-27.md  OCTAVA_VENDOR_TRACKER.md  POSTMORTEM_TEMPLATE.md  PR_BACK_TO_BASE.md  REPO_RESEARCH_100.md  RESEARCH_GAPS.md  RESULTS_GUIDE.md  ROLLBACK_RUNBOOK.md  SESSION_LOG.md  TERRAIN_PIVOT.md  TOOLING_AUDIT_AND_OPPORTUNITIES.md  T_PLUS_1_DEBRIEF.md  UPGRADE_PLAN.md  USER_ACTIONS_satellite.md  api_access_guide.md  (+24 more)
lqv/: __init__.py  asset_loader.py  boq.py  cameras.py  config.py  engine.py  furniture.py  geometry.py  lighting.py  materials.py  provenance.py  render.py
scripts/: analyze_assets.py  analyze_dem.py  analyze_era5_climate.py  analyze_polygon_ndvi_ndwi.py  analyze_stream.py  asset_manifest_check.py  build_boq.py  build_contact_sheets.py  build_escritura_deck.py  build_pelton_head_map.py  build_pelton_siting.py  build_property_map.py  build_render_catalogue.py  build_terrain_62ha_blend.py  build_wesley_bundle.py  build_wesley_onepager_pdf.py  check_gpu.sh  clean_gedi.py  contact_sheet_dem_ab.py  contact_sheet_dem_ab_oblique.py  contact_sheet_pelton.py  contact_sheet_satellite_overlay_ab.py  download_ambientcg_assets.py  download_assets.sh  download_polyhaven_assets.py  extract_gedi.py  extract_gedi_https.py  extract_gedi_s3.py  fetch_copernicus_lcover.py  fetch_era5_climate.py  fetch_gbif_species.py  fetch_opentopo_dem.py  fetch_osm.py  fetch_osm_v2.py  fetch_sentinel2.py  fetch_vegetation_3d.py  fetch_worldclim.py  gc_render_runs.py  make_hillshades.py  make_ndvi_mask.py  (+49 more)
tests/: test_boq_rollup.py  test_render_catalogue.py  test_rng_invariants.py  test_typology_contract.py
tools/: check_licenses.py
(+999 files in other folders)
