[project]
name = "la-quebrada-viva"
version = "0.1.0"
description = "La Quebrada Viva — 62 ha regenerative landscape + house render package (Blender/Cycles, La Cordillera, Paraguay)."
requires-python = ">=3.11"

[tool.pyright]
include = ["lqv", "tools", "scripts"]
extraPaths = ["."]
pythonVersion = "3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "_archive",
    "docs/site_data",
    "docs/site_data_monday",
    "renders",
    "subrenders",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Top-level driver: bootstraps lqv/ onto sys.path before importing it.
"build_scene.py" = ["E402"]
# Sub-render drivers: standalone entry points that insert repo root onto sys.path
# before importing lqv/.* — intentional and load-bearing for `blender --python`.
# Also use one-line ladders, semicolon-chained label calls, and embedded long
# scenic comments. Lint floor stays at F (undefined names, syntax).
"lqv/subscene/*.py" = ["E402", "E501", "E701", "E702", "E741"]
# Building-typology + amenity geometry modules: long descriptive scene comments
# and material-name strings frequently exceed 100 cols. Stylistic only.
"lqv/typologies/*.py" = ["E501"]
"lqv/amenities/*.py" = ["E501"]
# Hardcoded scenic strings in the flora photoreal + house stone wall modules;
# semicolon-chained matplotlib label/axis calls in the NDVI density helper.
"lqv/flora/*.py" = ["E501", "E702"]
"lqv/house/*.py" = ["E501"]
# `l` is used as a length local in two BoQ helpers — accepted, not bugs.
"lqv/boq.py" = ["E741"]
# Ad-hoc data/analysis scripts: many embed long URLs, captured stdout, and
# sys.path/dotenv shims before imports. They also use one-line if/return ladders
# (E701), semicolon-chained matplotlib axis labels (E702), zip without strict=
# (B905), and unused-but-named loop tuple slots (B007). Lint floor stays at F.
"scripts/*.py" = ["E401", "E402", "E501", "E701", "E702", "E741", "B007", "B905", "F401", "F541", "F841", "I001"]
